@@ -1,3 +1,13 @@
+== Released [attachment:wiki:SoftwareReleases:eLife-1.6b26.zip V1.6b26]   ==
+
+''' HAL '''
+
+Fixed null pointer if poll occurs before scan is complete from HAL. Resolves [ticket:587]
+
+''' Security '''
+
+Changed too many clients message to indicate contacting the integrator if the problem persists. Resolves [ticket:586]
+
 == Released [attachment:wiki:SoftwareReleases:eLife-1.6b25.zip V1.6b25]   ==
 
 ''' Comms '''
